# om-repo-picker

./: CMakeLists.txt
desktop/: CMakeLists.txt  org.openmandriva.repopicker.desktop
lang/: ca.ts  ca_ES.ts  de.ts  en.ts  es.ts  fi.ts  fr.ts  hi_IN.ts  hu.ts  it.ts  nl.ts  pl.ts  pt.ts  pt_BR.ts  pt_PT.ts  ru.ts  uk.ts  uk_UA.ts
src/: CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  FixedWidthScrollArea.cpp  FixedWidthScrollArea.h  MainDialog.cpp  MainDialog.h  OMRepos.cpp  OMRepos.h  RepoWidget.cpp  RepoWidget.h  ThirdPartyRepoWidget.cpp  ThirdPartyRepoWidget.h  Tools.cpp  Tools.h  UpdateChannel.cpp  UpdateChannel.h  UpdateChannelPicker.cpp  UpdateChannelPicker.h  main.cpp
